[gd_scene load_steps=4 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://plano_cartesiano.webp" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Sprite"]
current = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="PlanoCartesiano" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 517, 305.5 )
scale = Vector2( 2.24758, 1.74303 )
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CoordinateX" type="Label" parent="CanvasLayer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 46.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="CoordinateY" type="Label" parent="CanvasLayer"]
margin_top = 28.0
margin_right = 40.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="CoordinateZ" type="Label" parent="CanvasLayer"]
margin_top = 45.0
margin_right = 40.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
